add rules css member and user container

--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
             <!-- add speaker view resizable -->
             <div class="speaker">
                 <i class="fa-solid fa-border-all"></i>
-                <span>Speaker View</span>
+                <span>
+                    Speaker View
+                </span>
             </div>
              <!-- add icons maximize -->
             <div class="maximize">
                 <i class="fa-solid fa-maximize"></i>
             </div>
-           
         </div>
-
+        <!-- add members section -->
+        <section class="members flex">
+            <div class="user">
 
     </div>
-    
 </body>
 </html>
