--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
         <!-- add members section -->
         <section class="members flex">
             <div class="user">
+                <img src="https://picsum.photos/200" alt="usercam">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+        </section>
+                
 
     </div>
 </body>
