--- a/index.html
+++ b/index.html
@@ -93,11 +93,136 @@
                         </span>
                     </div>
                 </div>
-
-
-         
-                    
-
+                <!-- second row 7 img -->
+                <div class="members-flex">
+                    <div class="user">
+                        <img src="https://picsum.photos/200" alt="usercam">
+                        <div class="name">
+                            <i class="fa-solid fa-microphone-slash"></i>
+                            <span>
+                                Pinco Pallo
+                            </span>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/200" alt="usercam">
+                        <div class="name">
+                            <i class="fa-solid fa-microphone-slash"></i>
+                            <span>
+                                Pinco Pallo
+                            </span>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/200" alt="usercam">
+                        <div class="name">
+                            <i class="fa-solid fa-microphone-slash"></i>
+                            <span>
+                                Pinco Pallo
+                            </span>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/200" alt="usercam">
+                        <div class="name">
+                            <i class="fa-solid fa-microphone-slash"></i>
+                            <span>
+                                Pinco Pallo
+                            </span>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/200" alt="usercam">
+                        <div class="name">
+                            <i class="fa-solid fa-microphone-slash"></i>
+                            <span>
+                                Pinco Pallo
+                            </span>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/200" alt="usercam">
+                        <div class="name">
+                            <i class="fa-solid fa-microphone-slash"></i>
+                            <span>
+                                Pinco Pallo
+                            </span>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/200" alt="usercam">
+                        <div class="name">
+                            <i class="fa-solid fa-microphone-slash"></i>
+                            <span>
+                                Pinco Pallo
+                            </span>
+                        </div>
+                    </div>
+                    <!-- last row 7 img -->
+                    <div class="members-flex">
+                        <div class="user">
+                            <img src="https://picsum.photos/200" alt="usercam">
+                            <div class="name">
+                                <i class="fa-solid fa-microphone-slash"></i>
+                                <span>
+                                    Pinco Pallo
+                                </span>
+                            </div>
+                        </div>
+                        <div class="user">
+                            <img src="https://picsum.photos/200" alt="usercam">
+                            <div class="name">
+                                <i class="fa-solid fa-microphone-slash"></i>
+                                <span>
+                                    Pinco Pallo
+                                </span>
+                            </div>
+                        </div>
+                        <div class="user">
+                            <img src="https://picsum.photos/200" alt="usercam">
+                            <div class="name">
+                                <i class="fa-solid fa-microphone-slash"></i>
+                                <span>
+                                    Pinco Pallo
+                                </span>
+                            </div>
+                        </div>
+                        <div class="user">
+                            <img src="https://picsum.photos/200" alt="usercam">
+                            <div class="name">
+                                <i class="fa-solid fa-microphone-slash"></i>
+                                <span>
+                                    Pinco Pallo
+                                </span>
+                            </div>
+                        </div>
+                        <div class="user">
+                            <img src="https://picsum.photos/200" alt="usercam">
+                            <div class="name">
+                                <i class="fa-solid fa-microphone-slash"></i>
+                                <span>
+                                    Pinco Pallo
+                                </span>
+                            </div>
+                        </div>
+                        <div class="user">
+                            <img src="https://picsum.photos/200" alt="usercam">
+                            <div class="name">
+                                <i class="fa-solid fa-microphone-slash"></i>
+                                <span>
+                                    Pinco Pallo
+                                </span>
+                            </div>
+                        </div>
+                        <div class="user">
+                            <img src="https://picsum.photos/200" alt="usercam">
+                            <div class="name">
+                                <i class="fa-solid fa-microphone-slash"></i>
+                                <span>
+                                    Pinco Pallo
+                                </span>
+                            </div>
+                        </div>
             </div>
     </main>
 </body>
